# device-manager

./: .env.example  .excalidraw  README.md  docker-compose.yaml  pyproject.toml
device_daemon/: daemon.py
device_manager/: __main__.py
docker/: device_manager.Dockerfile
drivers/: base.py  factory.py  serial.py  tcp.py
models/: commands.py  data.py  http.py
orchestration/: base.py  factory.py  processes.py
scripts/: cli.py
sdk/: my_sdk.py
